<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">宝贝空间</string>
    <string name="number">0</string>
    <string name="tab1">成长日记</string>
    <string name="tab2">我的空间</string>
    <string name="tab3">更多</string>
    <string name="tab4">视频</string>
    <string name="tab5">微校通</string>
    <string name="bb_tab5">宝贝微校通</string>
    <string name="collect">收藏</string>
    <string name="share">分享</string>
    <string name="delete">删除</string>
    <string name="no_like">暂时还没有人点赞哦</string>
    <string name="send">说说</string>
    <string name="jion_discuss">我要说两句……</string>
    <string name="start_date">开始</string>
    <string name="end_date">结束</string>
    <string name="content">内容</string>
    <string name="input_key">请输入关键字</string>
    <string name="search">搜索</string>
    <string name="search_detail">搜索结果</string>
    <string name="access_error">访问出错</string>
    <string name="pw_wrong">密码错误</string>
    <string name="unknow_error">未知错误</string>
    <string name="cancel">取消</string>
    <string name="delete_this_diary">您确定要删除这条日记？</string>
    <string name="delete_this_photo">您确定要删除这张照片？</string>
    <string name="head_teacher">班主任</string>
    <string name="parents">家长</string>
    <string name="school_name">学校名称</string>
    <string name="group_name">群名称</string>
    <string name="join_date">加入时间</string>
    <string name="user_type">用户类型</string>
    <string name="publish">发表</string>
    <string name="zan">赞</string>
    <string name="comment">评</string>
    <string name="browse">浏览</string>
    <string name="call_error">无该用户电话</string>
    <string name="photo_number">张</string>
    <string name="selected">完成</string>
    <string name="publish_photos_vedios">上传发布</string>
    <string name="share_for">分享到</string>
    <string name="no_selected">请选择图片</string>
    <string name="album">手机相册</string>
    <string name="selected_photos_count">已选择(0)张</string>
    <string name="selected_photos_please">请选择发布图片</string>
    <string name="reduce_photos">最多可选</string>
    <string name="zhang">张</string>
    <string name="collect_success">收藏成功,请在我的空间&#8212;&#8212;个人相册中查找</string>
    <string name="delete_diary_success">删除成功</string>
    <string name="pinglun">评</string>
    <string name="retry">发送失败，重新发送</string>
    <string name="albums">相册</string>
    <string name="somebody_priase">有小伙伴点赞了哦</string>
    <string name="publishing_diary">待发表日记</string>
    <string name="publish_diary_success">日记发布成功</string>
    <string name="publish_diary_failure">图片上传失败</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="read_more">查看更多</string>
    <string name="diary">日记</string>
    <string name="no_more_diarys">没有更多日记了</string>
    <string name="praise_failure">点赞失败</string>
    <string name="praise_success">点赞成功</string>
    <string name="change_group_success">切换班级成功</string>
    <string name="collect_failure">收藏失败</string>
    <string name="uncollect_success">取消收藏成功</string>
    <string name="post_commets_success">发表评论成功</string>
    <string name="comment_null">请输入内容！</string>
    <string name="no_class_permission">您没有查看当前班级的权限</string>
    <string name="delete_comment_success">评论删除成功</string>
    <string name="local_entity">访问出错，加载离线内容</string>
    <string name="un_collect_photo">您确定要取消收藏这张照片？</string>
    <string name="uncollect_album_success">取消收藏该相册所有相片?</string>
    <string name="get_comments_failure">获取评论列表失败</string>
    <string name="sign_in_information">签到信息</string>
    <string name="today_none">当天暂无</string>
    <string name="home_and_school_information">家校信息</string>
    <string name="system_information">系统信息</string>
    <string name="sign_newsrell">签到记录</string>
    <string name="sign_manager">签到管理</string>
    <string name="sign_in">签入</string>
    <string name="no_sign_out">未签出</string>
    <string name="no_sign_in">未签入</string>
    <string name="sign_out">签出</string>
    <string name="sign_in_success">签入成功</string>
    <string name="sign_in__failure">签入失败</string>
    <string name="sign_out_success">签出成功</string>
    <string name="sign_out__failure">签出失败</string>
    <string name="all_sign_success">完成</string>
    <string name="choice_receiver">选择接收人</string>
    <string name="default_all_classmate">默认班级所有人</string>
    <string name="select_a_file_to_upload">请选择要上传的文件</string>
    <string name="please_install_a_file_manager">请先安装文件管理器</string>
    <string name="photo_notice">小提示：点击可删除图片，长按可查看大图</string>
    <string name="photo_upload_failure">图片上传失败，请重新上传</string>
    <string name="submit">提交</string>
    <string name="reply">回复</string>
    <string name="user_id">用户id(手机号)：</string>
    <string name="user_name">用户名：</string>
    <string name="email">邮箱:</string>
    <string name="QQ">QQ:</string>
    <string name="user_name2">用户名</string>
    <string name="email2">邮箱</string>
    <string name="QQ2">QQ</string>
    <string name="account_state">账号:</string>
    <string name="state_true">有效</string>
    <string name="state_false">无效</string>
    <string name="class_name">班级</string>
    <string name="jifen">积分</string>
    <string name="school">学校</string>
    <string name="nickname">昵称</string>
    <string name="nickname2">昵称：</string>
    <string name="relation2">关系：</string>
    <string name="zone">的空间</string>
    <string name="curriculum">课程表</string>
    <string name="input_email_style">请输入正确的邮箱</string>
    <string name="refresh_success">更新成功</string>
    <string name="receve_overview">通知消息接收详情：</string>
    <string name="juhe_browse">通过聚合浏览方式查看的用户：</string>
    <string name="receve_browse">确认接收的用户：</string>
    <string name="no_browse">未查看的用户：</string>
    <string name="no_register_notice">请确认你的手机号是否在所登记的学校内注册登记，否则将不能验证通过，有问题联系您孩子所在班级的老师或管理员。</string>
    <string name="success_read_notice">您已成功签收该消息</string>
    <string name="can_not_creat_directory">无法创建目录</string>
    <string name="update">检查更新</string>

</resources>