<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EFEFEF" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        style="@style/TopBackgroundTitleBarstyle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <Button
            android:id="@+id/button1"
            style="@style/backBtnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="tobreak" />

        <TextView
            android:id="@+id/tv_titlebar4"
            style="@style/TopTitleTextViewStyle"
            android:text="@string/album" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn49_selector"
            android:gravity="center"
            android:onClick="sendfiles"
            android:text="@string/selected"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:alpha="0.8"
        android:background="@android:color/black" >

        <HorizontalScrollView
            android:id="@+id/scrollview"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/button3"
            android:scrollbars="none" >

            <LinearLayout
                android:id="@+id/selected_image_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal" >
            </LinearLayout>
        </HorizontalScrollView>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#ADD8E6"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:text="@string/selected_photos_count"
            android:textColor="@android:color/black"
            android:visibility="visible" />
    </RelativeLayout>

    <GridView
        android:id="@+id/gridView1"
        style="@style/HorizontalPaddingstyle"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/relativeLayout2"
        android:layout_below="@+id/relativeLayout1"
        android:horizontalSpacing="@dimen/grid_item_space"
        android:listSelector="@color/bule_overlay"
        android:numColumns="3"
        android:scrollbarStyle="outsideOverlay"
        android:verticalSpacing="@dimen/grid_item_space"
        android:drawSelectorOnTop="@null" >
    </GridView>

</RelativeLayout>