<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space2"
        android:background="@drawable/list26"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_horizontal_padding"
        android:paddingLeft="@dimen/activity_horizontal_padding"
        android:paddingTop="@dimen/activity_horizontal_padding" >

        <FrameLayout
            android:layout_width="97dp"
            android:layout_height="97dp" >

            <ImageView
                android:id="@+id/headImg"
                android:layout_width="97dp"
                android:layout_height="97dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/head" />

            <ImageView
                android:id="@+id/tecImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/icon_tec"
                android:visibility="gone" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:layout_marginLeft="@dimen/tab2_center_leftDip"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/user_name"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/icon"
                    style="@style/tab2_image_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/button29"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/nameTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/icon"
                    android:textColor="#404040"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1000"
                android:gravity="center_vertical" 
                android:id="@+id/nickLyout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/nickname2"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/icon2"
                    style="@style/tab2_image_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/button29" />

                <TextView
                    android:id="@+id/nickNameTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/icon2"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:textColor="#404040"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/relation2"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/icon3"
                    style="@style/tab2_image_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/button29"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/classRelationTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/icon3"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/tv_tab_listOrientation1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@drawable/list30" >

        <TextView
            style="@style/tv_tab_listtv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1000" />

        <TextView
            android:id="@+id/schollTxt"
            style="@style/tv_tab_listtv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_padding" />
    </LinearLayout>

    <LinearLayout
        style="@style/tv_tab_listOrientation1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@drawable/list30" >

        <TextView
            style="@style/tv_tab_listtv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_name" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1000" />

        <TextView
            android:id="@+id/classTxt"
            style="@style/tv_tab_listtv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_padding" />
    </LinearLayout>

    <LinearLayout
        style="@style/tv_tab_listOrientation1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@drawable/list30" >

        <TextView
            style="@style/tv_tab_listtv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jifen" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1000" />

        <TextView
            android:id="@+id/jifenTxt"
            style="@style/tv_tab_listtv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_padding" />
    </LinearLayout>

    <TextView
        android:id="@+id/detailTxt"
        style="@style/tv_tab_listOrientation1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@drawable/list27"
        android:gravity="center"
        android:textColor="@color/red"
        android:textSize="16sp" />

</LinearLayout>